--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -102,7 +102,7 @@ a, a:hover {
   --reference-orange: #D4896C;
   --miscelaneous-green: #3B5849;
   --selected-option: #000000;
-  --select-blue: #0B71E7;
+  --select-blue: #0056b3;
 }
 /* Font Family */
 body, .sans-serif {
